--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Ignore UserSettings SukaZaebala
+/UserSettings
 UserSettings/Layouts/default-2021.dwlt
