--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 # Ignore UserSettings SukaZaebala
-/UserSettings
-UserSettings/Layouts/default-2021.dwlt
+*.dwlt
+UserSettings/
