--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 # Ignore UserSettings SukaZaebala
 /UserSettings
 UserSettings/Layouts/default-2021.dwlt
+Assets/Materials/ArmMetal.mat
